projects/compiler/test/typechecker/invocation/generics_error_method.2.out
Error at %FILE_NAME%:8:15
Type mismatch for parameter 't'
  |  val _ = f.foo("foo")
                   ^
Expected: Int
but instead found: String
