projects/compiler/test/typechecker/invocation/generics_error_method.2.abra
type Foo<T> {
  t: T

  func foo(self, t: T): T[] = [self.t, t]
}

val f = Foo(t: 123)
val _ = f.foo("foo")
